--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
       var model = {name:{first:'', last:''}};
       var lastModel = angular.copy(model);
 
-      var socket = io.connect("http://localhost:8889");
+      var socket = io.connect('http://'+window.location.host+':8889/');
 
       socket.on('channel', function(message){ 
         set(model, message.path, message.value);
