Edited public/index.html via GitHub

--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html xmlns:ng="http://angularjs.org">
   <script src="http://code.angularjs.org/angular-0.9.16.min.js" ng:autobind></script>
-  <script src="http://localhost:8889/socket.io/socket.io.js"></script> 
+  <script src="socket.io/socket.io.js"></script> 
   <script>
     angular.service('sharedModel', function($updateView){
       var model = {name:{first:'', last:''}};
