--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:ng="http://angularjs.org">
-  <script src="http://code.angularjs.org/angular-0.9.16.min.js" ng:autobind></script>
+  <meta charset="utf-8">
+  <script src="http://code.angularjs.org/angular-0.9.19.min.js" ng:autobind></script>
   <script src="http://localhost:8889/socket.io/socket.io.js"></script> 
   <script>
     angular.service('sharedModel', function($updateView){
